--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    height: 1500px;
     margin: 0;
 }
 
@@ -84,4 +85,45 @@ body {
     width: 500px;
     height: 300px;
     object-fit: cover;
+}
+
+/* information */
+
+.information {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 36px;
+    font-weight: 600;
+    color: #1f2937;
+}
+
+.box-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.box img {
+    height: 200px;
+    width: 250px;
+    object-fit: cover;
+    border: 4px solid #3882F6;
+    border-radius: 15px;
+}
+
+.box div {
+    width: 200px;
+    text-align: center;
+    margin-top: 15px;
 }
