--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,6 @@ body {
 .nav-bar a {
     text-decoration: none;
     color: inherit;
-
 }
 
 /* hero */
@@ -88,7 +87,7 @@ body {
 
 /* information */
 
-.info-container {
+.info {
     padding: 50px;
 }
 
@@ -153,7 +152,7 @@ body {
     font-style: italic;
     font-weight: 300;
     color: #1f2937;
-    
+    margin-bottom: 10px;
 }
 
 .quote-author {
